--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <canvas id="matrix"></canvas>
+    
     <div class="container">
-        <h1>Calculateur d'Heures</h1>
-        <input type="time" id="time1" value="00:00">
-        <input type="time" id="time2" value="00:00">
-        <div class="buttons">
-            <button onclick="calculateTime('add')">➕ Addition</button>
-            <button onclick="calculateTime('subtract')">➖ Soustraction</button>
-        </div>
+        <h1>🕒 Calculateur d'Heures Avancé</h1>
+        <p>Écrivez votre calcul en utilisant <b>+ et -</b> (ex: 2:30 + 1:45 - 0:15)</p>
+        <input type="text" id="timeInput" placeholder="Ex: 2:30 + 1:45 - 0:15">
+        <button onclick="calculate()">🧮 Calculer</button>
         <div id="result">Résultat : --:--</div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
