--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <canvas id="matrix"></canvas>
-    <img id="pythagore" src="pythagore.png" alt="Pythagore">
+    <img id="pythagore" src="images.jpg" alt="Pythagore">
 
     <div class="container">
         <h1>🕒 Calculateur d'Heures</h1>
